// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testes de Integração de Produutos GET /produto 1`] = `
Array [
  Object {
    "Codigo": "AF1010",
    "Descricao": "Apple iPhone 14 128GB Meia-noite 6,1",
    "Preco": 4199.56,
    "createdAt": "2024-01-30T15:47:28.723Z",
    "updatedAt": "2024-01-30T15:47:28.723Z",
  },
]
`;

exports[`Testes de Integração de Produutos POST /produto - altera um produto existente 1`] = `
Object {
  "Codigo": "AF1010",
  "Descricao": "Apple iPhone 14",
  "Preco": 3014.99,
  "createdAt": "2024-01-30 15:47:28.887 +00:00",
  "updatedAt": "2024-01-30 15:47:28.901 +00:00",
}
`;

exports[`Testes de Integração de Produutos POST /produto - incluindo um produto inexistente 1`] = `
Object {
  "Codigo": "AF1010",
  "Descricao": "Apple iPhone 14 128GB Meia-noite 6,1",
  "Preco": 4199.56,
  "createdAt": "2024-01-30T15:47:28.852Z",
  "updatedAt": "2024-01-30T15:47:28.852Z",
}
`;

exports[`Testes de Integração de Produutos PUT /produto - altera um produto existente 1`] = `
Object {
  "Codigo": "AF1010",
  "Descricao": "Apple iPhone 14",
  "Preco": 3014.99,
  "createdAt": "2024-01-30 15:47:28.958 +00:00",
  "updatedAt": "2024-01-30 15:47:28.970 +00:00",
}
`;
